--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
             }
         </style>
         <a href="index.html"><h5>Back Home!</h5></a>
-        <h1>What is this?</h1>
+        <h1>What is this project about?</h1>
         <h3>This is a prototype of a genre in which I am making a project in - virtual tryon. This market has been rapidly expanding in the upcoming years, and I have decided to make a project because of this.</h3>
         <h1>Virtual Tryon?</h1>
         <h3>Virtual Tryon is the use of smartphones for testing and trying out wearables via device(and not in-person) before buying.</h3>
