--- a/info.html
+++ b/info.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <style>
-            *{
-                font-family:sans-serif;
-            }
-            h1{
-                background-color:#dd55ff
-            }
-        </style>
+    <body class = "infobody">
+        <link rel="stylesheet" href="style.css">
         <a href="index.html"><h5>Back Home!</h5></a>
         <h1>What is this project about?</h1>
         <h3>This is a prototype of a genre in which I am making a project in - virtual tryon. This market has been rapidly expanding in the upcoming years, and I have decided to make a project because of this.</h3>
         <h1>Virtual Tryon?</h1>
         <h3>Virtual Tryon is the use of smartphones for testing and trying out wearables via device(and not in-person) before buying.</h3>
-        <h1>This is a jewelry app - look into the camera, click the second button to start, and jewellry will be seen on your face</h1>
-        <h1>Click the first button to stop the showing of jewelry[NEEDS WORK]</h1>
+        <h1>You can see two buttons in the home screen. The first one stops/pauses video, and the second one starts/resumes video.</h1>
+        <h2>Make sure that your face can be seen clearly, be, ideally 1-2 feet from the camera, and click the second button</h2>
+        <h2>I have not implemented a loading slider of any sort, so be aware that it will take time for the program to load. Wait 10 seconds for it to start.</h2>
+        <h3>When you see your face looking noticibly darker than how it normally is, and when you see a jagged line separating your face from your upper-forehead, this means that you are ready to use this </h3>
+        <h1>On the right of the program you will see a black bar with the names Earrings, Necklace, Nosering, and Bottu. Click these black bars to see some options</h1>
+        <h2>For now, click the Earring folder. You will see a bunch of options relating to earrings. Click the checkbox to see the earrings on your face.</h2>
+        <h2> The earrings might looks a bit off(a bit below or a bit over) your face. There are two sliders that you should pay attention to: the x-offset and y-offset slider. Changing the x-offset slider will move the earring side to side, and the y-offset slider will move the earrings up and down. Tune the position of the earrings accordingly</h2>
+        <h2>You can also change the scale of the earrings, as well, by changing the scale slider.</h2>
+        <h2>Finally, you can change the type of earrings on your face by changing the option in the dropdown menu</h2>
+        <h1>You can do the same things for necklaces, noserings, and bottus. I have not included rings or bangles yet, though I may in the future.</h1>
     </body>
 </html>
