shirt, distance-helper(maybe not needed), posenet improved accuracy

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <table>
             <tr>
                 <td>
-                   <h1>Jewellery Tryon <span style="font-size:20px">By Abhiraam Eranti</span></h1>
+                   <h1>Jewellery Tryon <span style="font-size:20px">(BETA)</span></h1>
+                   <h4>WARNING: RESIZING WINDOW MAY CRASH PROGRAM!</h4>
                     <a href="info.html"><h5>What is this - instructions</h5></a>
                     <div id = "container">
                         <video autoplay="true" id="video"></video>
-                        <canvas id = "draw" width="700" height="450"></canvas>
+                        <canvas id = "draw" ></canvas>
                         <button id = "stopVideo" ><h6>Stop/Pause</h6></button>
                         <button id = "threeJS"><h6>Play/Resume</h6></button>
                         <div id = "loader" class = "dormant-state"></div>
@@ -52,6 +53,8 @@
         <script src="./js/mask.js" type="module"></script>
         <script src = "./js/bangleRight.js" type="module"></script>
         <script src="./js/index.js" type="module"></script>
+        <script src="./js/shirt.js" type="module"></script>
+        <script src="./js/distanceHelper.js" type="module"></script>
         
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
