--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <script src="./js/index.js" type="module"></script>
         <script src="./js/shirt.js" type="module"></script>
         <script src="./js/distanceHelper.js" type="module"></script>
-        
+        <script src="./js/modelHelper.js" type="module"></script>
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
                 Virtual-Tryon
