Neck Occluder, Fixed Playing Early Bug, Orbit Controls

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             <tr>
                 <td>
                    <h1>Jewellery Tryon <span style="font-size:20px">(BETA)</span></h1>
-                   <h4>WARNING: RESIZING WINDOW MAY CRASH PROGRAM!</h4>
+<!--                   <h4>WARNING: RESIZING WINDOW MAY CRASH PROGRAM!</h4>-->
                     <a href="info.html"><h5>What is this - instructions</h5></a>
                     <div id = "container">
                         <video autoplay="true" id="video"></video>
                         <canvas id = "draw" ></canvas>
                         <button id = "stopVideo" ><h6>Stop/Pause</h6></button>
                         <button id = "threeJS"><h6>Play/Resume</h6></button>
+                        <button id = "resetOrbit"><h6>Reset Orbit Controls</h6></button>
                         <div id = "loader" class = "dormant-state"></div>
                     </div>
                 </td>
@@ -52,10 +53,12 @@
         <script src = "./js/goggles.js" type="module"></script>
         <script src="./js/mask.js" type="module"></script>
         <script src = "./js/bangleRight.js" type="module"></script>
-        <script src="./js/index.js" type="module"></script>
         <script src="./js/shirt.js" type="module"></script>
         <script src="./js/distanceHelper.js" type="module"></script>
         <script src="./js/modelHelper.js" type="module"></script>
+        <script src="./js/neckOccluder.js" type="module"></script>
+        <script src="./js/index.js" type="module"></script>
+
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
                 Virtual-Tryon
