--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <!--        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>-->
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
+        <script src="https://unpkg.com/@tensorflow-models/handpose@0.0.6/dist/handpose.js"></script>
         <script src = "third-party/dat.gui.js"></script>
         <script src="https://threejs.org/build/three.js"></script>
         <script src="./third-party/face.js" type="module"></script>
@@ -52,13 +53,13 @@
         <script src="./js/nosering.js" type="module"></script>
         <script src = "./js/goggles.js" type="module"></script>
         <script src="./js/mask.js" type="module"></script>
-        <script src = "./js/bangleRight.js" type="module"></script>
+<!--        <script src = "./js/bangleRight.js" type="module"></script>-->
         <script src="./js/shirt.js" type="module"></script>
         <script src="./js/distanceHelper.js" type="module"></script>
         <script src="./js/modelHelper.js" type="module"></script>
         <script src="./js/neckOccluder.js" type="module"></script>
+        <script src="./js/ring.js" type="module"></script>
         <script src="./js/index.js" type="module"></script>
-
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
                 Virtual-Tryon
