--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 <!--        <script src = "./js/bangleRight.js" type="module"></script>-->
         <script src="./js/shirt.js" type="module"></script>
         <script src="./js/distanceHelper.js" type="module"></script>
+        <script src="./js/rotHelper.js" type="module"></script>
         <script src="./js/modelHelper.js" type="module"></script>
         <script src="./js/neckOccluder.js" type="module"></script>
         <script src="./js/ring.js" type="module"></script>
+        <script src="./js/bangle.js" type="module"></script>
         <script src="./js/index.js" type="module"></script>
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
