--- a/info.html
+++ b/info.html
@@ -13,10 +13,6 @@
         <h2>Wait for the program to load.</h2>
         <h3>When the loader stops, you should see a difference to your face. This is due to lighting problems.</h3>
         <h1>On the right of the program you will see a black bar with the names Earrings, Necklace, Nosering, and Bottu. Click these black bars to see some options</h1>
-        <h2>For now, click the Earring folder. You will see a bunch of options relating to earrings. Click the checkbox to see the earrings on your face.</h2>
-        <h2> The earrings might looks a bit off(a bit below or a bit over) your face. There are two sliders that you should pay attention to: the x-offset and y-offset slider. Changing the x-offset slider will move the earring side to side, and the y-offset slider will move the earrings up and down. Tune the position of the earrings accordingly</h2>
-        <h2>You can also change the scale of the earrings, as well, by changing the scale slider.</h2>
-        <h2>Finally, you can change the type of earrings on your face by changing the option in the dropdown menu</h2>
-        <h1>You can do the same things for necklaces, noserings, and bottus. I have not included rings or bangles yet, though I may in the future.</h1>
+        <h1>PLAY AROUND! Check out the settings. Reload the page to reset them.</h1>
     </body>
 </html>
