--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <script src="./js/neckOccluder.js" type="module"></script>
         <script src="./js/ring.js" type="module"></script>
         <script src="./js/bangle.js" type="module"></script>
+        <script src="./js/headLocket.js" type="module"></script>
         <script src="./js/index.js" type="module"></script>
         <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
