Added ControlsHelper Class, Made code neat, changed instructions

--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
                     </div>
                 </td>
                 <td>
-<!--                    <button id = "landmarkButton">GET LAND MARKS</button>-->
-<!--                    <br>-->
-                    
-                    <br>
-                     
                 </td>
             </tr>
         </table>
@@ -58,6 +53,7 @@
         <script src="./js/distanceHelper.js" type="module"></script>
         <script src="./js/rotHelper.js" type="module"></script>
         <script src="./js/modelHelper.js" type="module"></script>
+        <script src="./js/controlsHelper.js" type="module"></script>
         <script src="./js/neckOccluder.js" type="module"></script>
         <script src="./js/ring.js" type="module"></script>
         <script src="./js/bangle.js" type="module"></script>
