--- a/info.html
+++ b/info.html
@@ -5,14 +5,16 @@
         <h1>WARNING: USE A COMPUTER WHEN DOING THIS! DO NOT USE IT ON A PHONE</h1>
         <a href="index.html"><h5>Back Home!</h5></a>
         <h1>What is this project about?</h1>
-        <h3>This is a prototype of a genre in which I am making a project in - virtual tryon. This market has been rapidly expanding in the upcoming years, and I have decided to make a project because of this.</h3>
+        <h3>This is a prototype of a genre in which I am making a project in - virtual tryon. This market has been rapidly expanding in the upcoming years, and I decided to make a project because of this.</h3>
         <h1>Virtual Tryon?</h1>
-        <h3>Virtual Tryon is the use of smartphones for testing and trying out wearables via device(and not in-person) before buying.</h3>
-        <h1>You can see two buttons in the home screen. The first one stops/pauses video, and the second one starts/resumes video.</h1>
+        <h3>Virtual Tryon is the use of devices for testing and trying out wearables via the device(and not in-person) before buying.</h3>
+        <h1>You can see three buttons in the home screen. The first one stops/pauses video, the second one starts/resumes video, and the third resets Orbit Controls(thing you can use to move the screen and see how things look like in side view).</h1>
         <h2>Make sure that your face can be seen clearly, be, ideally 1-2 feet from the camera, and click the second button</h2>
         <h2>Wait for the program to load.</h2>
-        <h3>When the loader stops, you should see a difference to your face. This is due to lighting problems.</h3>
-        <h1>On the right of the program you will see a black bar with the names Earrings, Necklace, Nosering, and Bottu. Click these black bars to see some options</h1>
+        <h3>When the loader stops, you should see a "mask" almost on your face</h3>
+        <h1>On the right of the program you will see a black bar with many folders each having options. Click these olders</h1>
         <h1>PLAY AROUND! Check out the settings. Reload the page to reset them.</h1>
+        <h1>I am using a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License. This means you have to give me credit when sharing(by Abhiraam Eranti https://github.com/dewball345). You also cannot modify this project. Finally, you cannot publish this project as your own. </h1>
+        <h1>It is my wish for you to not share it across social media. If you are a decent human being, don't share it.</h1>
     </body>
 </html>
