fixed bug in jewelery playground, goggle sample

--- a/indexgoggle.html
+++ b/indexgoggle.html
@@ -56,5 +56,5 @@
         <script src="./js/indexgoggles.js" type="module"></script>
         
     </body>
-    <h3>see instructions in jewellery playground</h3>
+<!--    <h3>see instructions in jewellery playground</h3>-->
 </html>
