--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <a href="indexall.html">Jewellery Playground</a>
         <br>
-        <a href="indexgoggle.html">Sample Glasses Store App</a>
+        <a href="indexgoggle.html">Sample Glasses Store App. :D</a>
         
         <h6 xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
