changed font size

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             h1{
                 color: #2d132c;
                 margin-bottom: -20px;
-                font-size:3vw;
+                font-size:55px;
             }
             h3{
                 color: #2d132c;
-                font-size:1vw;
+                font-size:17px;
             }
             a{
                 color: #2d132c;
