fixed facemesh bug, facemask, switched to mediapipe

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
         <a href="indexall.html">Jewellery Playground</a>
         <br>
         <a href="indexgoggle.html">Sample Glasses Store App. :D</a>
-        
+        <h3>Supported Jewelry/Accessories</h3>
+        <ul>
+            <li>bangle</li>
+            <li>bottu</li>
+            <li>earrings</li>
+            <li>face mask</li>
+            <li>goggles</li>
+            <li>maang tikka</li>
+            <li>necklace</li>
+            <li>nose ring</li>
+            <li>ring</li>
+            <li>shirt</li>
+        </ul>
         <h6 xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
             <span rel="dct:title">
                 Virtual-Tryon
@@ -54,6 +66,7 @@
                 <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" />
                 <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nd.svg?ref=chooser-v1" />
             </a>
+
         </h6>
     </body>
 </html>
