--- a/indexall.html
+++ b/indexall.html
@@ -51,7 +51,7 @@
         <script src="./third-party/OBJLoader.js" type="module"></script>
         
 
-        <script src="./dist/main.js" type="module"></script>
+        <script src="./js/index.js" type="module"></script>
         
     </body>
 
