hat, fps counter

--- a/indexall.html
+++ b/indexall.html
@@ -15,6 +15,7 @@
 <!--                   <h4>WARNING: RESIZING WINDOW MAY CRASH PROGRAM!</h4>-->
                     <a href="info.html"><h5>What is this - instructions</h5></a>
                     <h3 id="loading-text"></h3>
+                    <h4 id = "FPS" ></h4>
                     <div id = "container">
                         <video autoplay="true" id="video"></video>
                         <canvas id = "draw" ></canvas>
