added photo option

--- a/indexall.html
+++ b/indexall.html
@@ -16,16 +16,22 @@
                     <a href="info.html"><h5>What is this - instructions</h5></a>
                     <h3 id="loading-text"></h3>
                     <h4 id = "FPS" ></h4>
-                    <div id = "container">
+                    <div class="borderimage" id = "container">
                         <video autoplay="true" id="video"></video>
                         <canvas id = "draw" ></canvas>
                         <button id = "stopVideo" ><h6>Stop/Pause</h6></button>
                         <button id = "threeJS"><h6>Play/Resume</h6></button>
+                        <button id = "takePic"><h6>Take Photo</h6></button>
                         <button id = "resetOrbit"><h6>Reset Orbit Controls</h6></button>
                         <div id = "loader" class = "dormant-state"></div>
                     </div>
                 </td>
-                <td>
+                <td >
+                    <div id="photosection">
+                    <h1>Pictures</h1>
+                    <h4>View your pictures here. Right click and save image</h3>
+                    <div id="photolist">
+                    </div>
                 </td>
             </tr>
         </table>
