--- a/indexgoggle.html
+++ b/indexgoggle.html
@@ -32,7 +32,7 @@
         </style>
     </head>
     <body>
-        <h1>Gaggle Glasses</h1>
+        <h1>Gaggles Glasses</h1>
         <h6>Family owned, trendy, hand-crafted glasses</h6>
         <div id = "container" style="position:relative">
             <video autoplay="true" id="video" width="450" height="450" style="position: absolute"></video>
@@ -42,7 +42,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh@0.0.4"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
         <script src="https://unpkg.com/@tensorflow-models/handpose@0.0.6/dist/handpose.js"></script>
         <script src="https://threejs.org/build/three.js"></script>
@@ -50,9 +50,9 @@
         <script src="./third-party/geometry.js" type="module"></script>
         <script src="./third-party/triangulation.js" type="module"></script>
         <script src="./third-party/OBJLoader.js" type="module"></script>
-        <script src = "./js/goggles.js" type="module"></script>
-        <script src="./js/mask.js" type="module"></script>
-        <script src="./js/modelHelper.js" type="module"></script>
+        <script src = "./js/jewelery/goggles.js" type="module"></script>
+        <script src="./js/jewelery/mask.js" type="module"></script>
+        <script src="./js/helpers/modelHelper.js" type="module"></script>
         <script src="./js/indexgoggles.js" type="module"></script>
         
     </body>
