gltf for earrings, necklace

--- a/info.html
+++ b/info.html
@@ -15,6 +15,6 @@
         <h1>On the right of the program you will see a black bar with many folders each having options. Click these olders</h1>
         <h1>PLAY AROUND! Check out the settings. Reload the page to reset them.</h1>
         <h1>I am using a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License. This means you have to give me credit when sharing(by Abhiraam Eranti https://github.com/dewball345). You also cannot modify this project. Finally, you cannot publish this project as your own. </h1>
-        <h1>It is my wish for you to not share it across social media. If you are a decent human being, don't share it.</h1>
+        <h1>It is my wish for you to not share it across social media until it is done(which may take a while).</h1>
     </body>
 </html>
